modify the default peers

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,5 +12,5 @@ log4j.appender.raft.layout=org.apache.log4j.PatternLayout
 log4j.appender.raft.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c{1}:%L - %m%n
 log4j.logger.RocketmqRemoting=ERROR, raft
 log4j.additivity.RocketmqRemoting=false
-log4j.logger.com.github.chenfeikun.raft.cmdClient.cmd=INFO, stdout
-log4j.additivity.com.github.chenfeikun.raft.cmdClient.cmd.MainCommand=false
+log4j.logger.com.github.chenfeikun.raft.cmdClient=INFO, stdout
+log4j.additivity.com.github.chenfeikun.raft.cmdClient=false
